2011-06-17  Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/GNUstepBase/NSURL+GNUstepBase.h: Add method to build a URL
	from separate components.
	* Headers/Foundation/NSURL.h: Add some OSX 10.6 methods for path
	handling, and incorporate documentation from source file.
	* Source/NSURL.m: Add some OSX 10.6 methods for path handling, fix
	minor bug checking resource availability, and move documentation to
	header.
	* Source/Additions/NSURL+GNUstepBase.m: Add method to build a URL from
	components.
	We NEED testcases for these.

2011-06-13 Fred Kiefer <FredKiefer@gmx.de>

	* Source/GSAvahiRunLoopIntegration.m: Declare the local methods in
	the interface.
	Patch by Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>

2011-06-11 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSDateFormatter.m,
	* Source/NSTimeZone.m,
	* Source/NSCalendar.m: Protect the name id.
	Patch by Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>

2011-06-09  Richard Frith-Macdonald <rfm@gnu.org>

	* configure: Regenerate
	* config.mak.in:
	* configure.ac:
	* Source/Makefile.preamble:
	* Tools/Makefile.postamble:
	* Tools/Makefile.preamble:
	Add --with-gdomap-port= to specify an alternative port

2011-06-07  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/Additions/GSLock.m:
	Remove notification observation on dealloc.

2011-06-04  Fred Kiefer <FredKiefer@gmx.de>

	* Headers/Foundation/NSURL.h,
	* Source/NSURL.m: Add -checkResourceIsReachableAndReturnError:

2011-06-03  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSString.m: [(-getLineStart:end:contentsEnd:forRange:)]
	Fix off-by-one error in reported contents end for DOS style lines.

2011-06-02 Riccardo Mottola <rm@gnu.org>

	* Source/NSTimeZone.m: Disable use of tzname on OpenBSD too.

2011-06-02  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSTimeZone.m: Allow for quotes around zone name in
	/etc/sysconfig/time on redhat/centos.

2011-06-01  Richard Frith-Macdonald <rfm@gnu.org>
